# NASA-News-Bot

./: .gitignore  Makefile  README.md  buildspec.yml  docker-compose.yaml  pyproject.toml  schema.sql
backend/: Dockerfile  app.py  nasa_answer_generator.py
backend/mysql_database/: database.py  message_history.py  schema.py
frontend/: Dockerfile  app.py  get_backend_load_balancer_url.py
frontend/static/: nasa.js
frontend/static/css/: styles.css
frontend/static/images/: bin.png:Zone.Identifier  comment.png:Zone.Identifier  copy.png:Zone.Identifier  dislike.png:Zone.Identifier  like (1).png:Zone.Identifier  like.png:Zone.Identifier  mars.jpg:Zone.Identifier  nasa-logo.jpg:Zone.Identifier  (+3 more)
frontend/templates/: home.html  nasa.js
k8s/: backend-deployment.yaml  backend-secret.yaml  backend-service.yaml  efs-storage-class.yaml  frontend-deployment.yaml  frontend-rolebinding.yaml  frontend-secret.yaml  frontend-service-account.yaml  frontend-service.yaml  mysql-pod.yaml  mysql-secret.yaml  qdrant-pod.yaml  qdrant-service.yaml  qdrant-snapshot-restoration-pvc.yaml  sync-pod.yaml  sync-secret.yaml
k8s/backend/: values.yaml
k8s/frontend/: values.yaml
k8s/mysql/: values.yaml
k8s/qdrant/: Chart.yaml  values.yaml
mysql_database/: database.py  schema.py
sync/: Dockerfile  generate_embeddings.py  restore-to-qdrant-vectorstore.sh  web_scrape_pages.py
terraform/: codebuild.tf  codepipeline.tf  cognito_user_pool.tf  ecr.tf  efs.tf  eks.tf  provider.tf  secrets.tf  sns.tf  variables.tf  vpc.tf
vector_store/: generate_embeddings.py  web_scrape_pages.py
(+6 files in other folders)
